fix:height on mobile devices(Sun, OCt 17, 2021 20:50)

--- a/cssMemSlider/styles.css
+++ b/cssMemSlider/styles.css
@@ -221,7 +221,7 @@ body{
         align-items: center;
         margin-top: 10px;
         row-gap: 10px;
-        height: 10vh;
+        height: 14vh;
     }
 
     .text{
